fix: add volumes in docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,6 @@ services:
     depends_on:
       db:
         condition: service_healthy
-      redis:
-        condition: service_healthy
     environment:
       POSTGRES_USER: "${POSTGRES_USER:-scmbr}"
       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD:-subscription-aggregator}"
@@ -33,17 +31,21 @@ services:
     volumes:
       - ./configs:/app/configs:ro
 
-    migrate: 
-      image: migrate/migrate 
-      volumes:
-        - ./migrations:/migrations
-      environment:
-        POSTGRES_USER: "${POSTGRES_USER:-scmbr}"
-        POSTGRES_PASSWORD: "${POSTGRES_PASSWORD:-subscription-aggregator}"
-        POSTGRES_DB: "${POSTGRES_DB:-subscription-aggregator}"
-      command: ["-path", "/migrations", "-database", "postgres://${POSTGRES_USER:-scmbr}:${POSTGRES_PASSWORD:-subscription-aggregator}@db:5432/${POSTGRES_DB:-subscription-aggregator}?sslmode=disable", "up"]
-      links: 
-        - db
-      depends_on:
-        db:
-          condition: service_healthy
+  migrate: 
+    image: migrate/migrate 
+    volumes:
+      - ./migrations:/migrations
+    environment:
+      POSTGRES_USER: "${POSTGRES_USER:-scmbr}"
+      POSTGRES_PASSWORD: "${POSTGRES_PASSWORD:-subscription-aggregator}"
+      POSTGRES_DB: "${POSTGRES_DB:-subscription-aggregator}"
+    command: ["-path", "/migrations", "-database", "postgres://${POSTGRES_USER:-scmbr}:${POSTGRES_PASSWORD:-subscription-aggregator}@db:5432/${POSTGRES_DB:-subscription-aggregator}?sslmode=disable", "up"]
+    links: 
+      - db
+    depends_on:
+      db:
+        condition: service_healthy
+  
+volumes:
+  postgres_data:
+  redis_data:
